--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             <section class="skill">
                 <h2>Skills</h2>
                 <ul>
-                    <li>Front-end web development</li>
-                    <li>Object-oriented programming</li>
-                    <li>Responsive Web Design</li>
-                    <li>UI/UX Design</li>
-                    <li>Version Control (Git)</li>
+                    <li>Front-end development</li>
+                    <li>Object-oriented design</li>
+                    <li>Responsive web design</li>
+                    <li>UI/UX design</li>
+                    <li>Version control (Git)</li>
                     <li>Capability to learn necessary technologies</li>
                 </ul>
             </section>
@@ -50,7 +50,6 @@
                     <li>CSS3</li>
                     <li>JavaScript</li>
                     <li>SASS</li>
-                    <li>Flexbox & Grid</li>
                     <li>Bootstrap</li>
                     <li>jQuery</li>
                     <li>React.js</li>
