--- a/index.html
+++ b/index.html
@@ -39,40 +39,36 @@
         <div class="right">
             <section class="about">
                 <h2>About me</h2>
-                <p>I'm a self-taught front-end developer, working towards full-stack development. </p>
+                <p>I'm a freelance website designer and developer currently based in Gainesville, Florida. I specialize in front-end technologies with a working knowledge of back-end technologies.</p>
             </section>
             <section class="skill">
                 <h2>Skills</h2>
                 <ul>
-                    <li>Front-end development</li>
-                    <li>Object-oriented design</li>
-                    <li>Responsive web design</li>
+                    <li>Website design & development</li>
+                    <li>Website deployment</li>
                     <li>UI/UX design</li>
-                    <li>Version control (Git)</li>
-                    <li>Capability to learn necessary technologies</li>
+                    <li>Version Control (Git)</li>
                 </ul>
             </section>
             <section class="technology">
                 <h2>Technologies</h2>
                 <ul>
                     <li>HTML5</li>
-                    <li>CSS3</li>
+                    <li>CSS3/SASS</li>
                     <li>JavaScript</li>
-                    <li>SASS</li>
-                    <li>Bootstrap</li>
                     <li>jQuery</li>
                     <li>React.js</li>
+                    <li>Adobe Creative Suite</li>
                 </ul>
             </section>
             <section class="interest">
                 <h2>Interests</h2>
-                <p>Computers and technology, Programming (Interests in software development, web development, video game development, machine learning & robotics), video games (mostly DotA 2, sometimes CS:GO and popular games here and there.), hip-hop & rap music as well the production of it.</p>
+                <p>Computers and technology, Programming (Software development, web development, video game development & machine learning), video games, hip-hop and rap music, & hip-hop and rap production.</p>
             </section>
             <section class="experience">
                 <h2>Experience</h2>
-                <p>Currently freelance web developing with focus on gaining experience and building portfolio.</p>
+                <p>Currently pursuing freelance website development as well as expanding portfolio.</p>
             </section>
-
         </div>
     </div>
 </body>
