--- a/index.html
+++ b/index.html
@@ -38,35 +38,35 @@
         </div>
         <div class="right">
             <section class="about">
-                <h2>About me</h2>
-                <p>I'm a freelance website designer and developer currently based in Gainesville, Florida. I specialize in front-end technologies with a working knowledge of back-end technologies.</p>
+                <h2>About me:</h2>
+                <p>I'm a freelance website designer and developer currently based in Gainesville, Florida. I specialize in front-end development with a working knowledge of back-end development.</p>
             </section>
             <section class="skill">
-                <h2>Skills</h2>
+                <h2>Skills:</h2>
                 <ul>
                     <li>Website design & development</li>
                     <li>Website deployment</li>
+                    <li>Website analytics</li>
                     <li>UI/UX design</li>
-                    <li>Version Control (Git)</li>
                 </ul>
             </section>
             <section class="technology">
-                <h2>Technologies</h2>
+                <h2>Technologies:</h2>
                 <ul>
-                    <li>HTML5</li>
-                    <li>CSS3/SASS</li>
+                    <li>HTML</li>
+                    <li>CSS/SASS</li>
                     <li>JavaScript</li>
                     <li>jQuery</li>
                     <li>React.js</li>
                 </ul>
             </section>
             <section class="interest">
-                <h2>Interests</h2>
-                <p>Computers and technology, Programming (Software development, web development, video game development & machine learning), video games, hip-hop and rap music, & hip-hop and rap production.</p>
+                <h2>Interests:</h2>
+                <p>Computers and technology, Programming (Web development, software development, video game development & machine learning), video games, hip-hop and rap music, & hip-hop and rap production.</p>
             </section>
             <section class="experience">
-                <h2>Experience</h2>
-                <p>Currently pursuing freelance website development as well as expanding portfolio.</p>
+                <h2>Experience:</h2>
+                <p>Currently freelancing as well as expanding portfolio.</p>
             </section>
         </div>
     </div>
