--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <li>CSS/SASS</li>
                     <li>JavaScript</li>
                     <li>jQuery</li>
-                    <li>React.js</li>
+                    <li>React</li>
                 </ul>
             </section>
             <section class="interest">
