--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     </script>
 
 </head>
-
 <body>
     <div class="container">
         <div class="left">
@@ -66,7 +65,7 @@
                     <li>HTML</li>
                     <li>CSS/SASS</li>
                     <li>JavaScript</li>
-                    <li>jQuery</li>
+                    <li>WordPress</li>
                     <li>React</li>
                 </ul>
             </section>
