--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css\main.css">    
     
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -36,7 +36,7 @@
             <div class="infobox">
                 <img src="img\me.jpg" alt="Picture of Me">
                 <h1>Ethan Tudela</h1>
-                <p>Front-end Developer</p>
+                <p>Website designer & developer</p>
                 <a href="mailto:ethan.tudela@gmail.com">Let's chat.</a>
             </div>
             <nav>
@@ -47,20 +47,19 @@
         </div>
         <div class="right">
             <section class="about">
-                <h2>About me:</h2>
+                <h2>About Me</h2>
                 <p>I'm a freelance website designer and developer currently based in Gainesville, Florida. I specialize in front-end development with a working knowledge of back-end development.</p>
             </section>
             <section class="skill">
-                <h2>Skills:</h2>
+                <h2>Skills</h2>
                 <ul>
                     <li>Website design & development</li>
                     <li>Website deployment</li>
                     <li>Website analytics</li>
-                    <li>UI/UX design</li>
                 </ul>
             </section>
             <section class="technology">
-                <h2>Technologies:</h2>
+                <h2>Tech</h2>
                 <ul>
                     <li>HTML</li>
                     <li>CSS/SASS</li>
@@ -69,12 +68,17 @@
                 </ul>
             </section>
             <section class="interest">
-                <h2>Interests:</h2>
-                <p>Computers and technology, Programming (Web development, software development, video game development & machine learning), video games, hip-hop and rap music, & hip-hop and rap production.</p>
+                <h2>Tools</h2>
+                <ul>
+                    <li>Visual Studio Code</li>
+                    <li>Adobe XD & Photoshop</li>
+                </ul>
             </section>
             <section class="experience">
-                <h2>Experience:</h2>
-                <p>Currently freelancing as well as expanding portfolio.</p>
+                <h2>Experience</h2>
+                <div class="experience-list">
+                    <div class="experience-item"><p><span>Nov. 2018 - Present</span>- Freelance website development</p></div>
+                </div>
             </section>
         </div>
     </div>
