--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="left">
             <div class="infobox">
-                <img src="img\me.jpg" alt="Picture of Me">
+                <img src="img\picture-of-me.jpg" alt="Picture of Me">
                 <h1>Ethan Tudela</h1>
                 <p>Website designer & developer</p>
                 <a href="mailto:ethan.tudela@gmail.com">Let's chat.</a>
