--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ethan Tudela | Website designer & developer</title>
-    <meta name="description"
-        content="Ethan Tudela is a freelance website designer and developer currently based in Gainesville, Florida.">
+    <meta name="description" content="Ethan Tudela is a freelancing website designer and developer currently based in Gainesville, Florida.">
     <meta name="robots" content="index, nofollow">
     <meta name="author" content="Ethan Tudela">
 
@@ -107,9 +106,10 @@
                     </div>
                 </div>
             </section>
+            <section class="credits"><a href="http://www.camstrobel.com/">Site inspired by <span>Cam Strobel</span></a></section>
         </div>
+        
     </div>
-
 </body>
 
 </html>
