--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                     <li>HTML</li>
                     <li>CSS/SASS</li>
                     <li>JavaScript</li>
+                    <li>jQuery</li>
                     <li>React</li>
                 </ul>
             </section>
