--- a/index.html
+++ b/index.html
@@ -57,57 +57,58 @@
         <div class="left">
             <div class="infobox">
                 <img src="img\picture-of-me.jpg" alt="Picture of Me">
-                <h1>Ethan Tudela</h1>
-                <p>Website designer & developer</p>
+                <h1>Hey there, I'm Ethan Tudela. <br>Freelance website designer.</h1>
                 <a href="mailto:ethan.tudela@gmail.com">Let's chat.</a>
             </div>
             <nav>
                 <a href="https://www.linkedin.com/in/ethantudela/"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://github.com/ethantudela"><i class="fab fa-github"></i></a>
-                <a href="https://stackoverflow.com/users/10292365/ethan-tudela"><i
-                        class="fab fa-stack-overflow"></i></a>
+                <a href="https://stackoverflow.com/users/10292365/ethan-tudela"><i class="fab fa-stack-overflow"></i></a>
             </nav>
         </div>
         <div class="right">
             <section class="about">
-                <h2>About Me</h2>
+                <h3>About Me</h3>
                 <p>I'm a freelance website designer and developer currently based in Gainesville, Florida. I specialize
                     in front-end development with a working knowledge of back-end development.</p>
             </section>
             <section class="skill">
-                <h2>Skills</h2>
+                <h3>Skills</h3>
                 <ul>
-                    <li>Website design & development</li>
-                    <li>Website deployment</li>
-                    <li>Website analytics</li>
+                    <li><i class="fas fa-caret-right"></i>Website design & development</li>
+                    <li><i class="fas fa-caret-right"></i>Website deployment</li>
+                    <li><i class="fas fa-caret-right"></i>Website analytics</li>
                 </ul>
             </section>
             <section class="technology">
-                <h2>Tech</h2>
+                <h3>Tech overview</h3>
                 <ul>
-                    <li>HTML</li>
-                    <li>CSS/SASS</li>
-                    <li>JavaScript</li>
-                    <li>jQuery</li>
-                    <li>React</li>
+                    <li><i class="fas fa-caret-right"></i>HTML</li>
+                    <li><i class="fas fa-caret-right"></i>CSS/SASS</li>
+                    <li><i class="fas fa-caret-right"></i>JavaScript</li>
+                    <li><i class="fas fa-caret-right"></i>jQuery</li>
+                    <li><i class="fas fa-caret-right"></i>React</li>
                 </ul>
             </section>
             <section class="interest">
-                <h2>Tools</h2>
+                <h3>Tools</h3>
                 <ul>
-                    <li>Visual Studio Code</li>
-                    <li>Adobe XD & Photoshop</li>
+                    <li><i class="fas fa-caret-right"></i>Visual Studio Code</li>
+                    <li><i class="fas fa-caret-right"></i>Adobe XD & Photoshop</li>
                 </ul>
             </section>
             <section class="experience">
-                <h2>Experience</h2>
+                <h3>Experience</h3>
                 <div class="experience-list">
                     <div class="experience-item">
                         <p><span>Nov. 2018 - Present</span> - Freelance website development</p>
                     </div>
                 </div>
             </section>
-            <section class="credits"><a href="http://www.camstrobel.com/">Site inspired by <span>Cam Strobel</span></a></section>
+            <section class="misc">
+            <a class="misc-left" href="https://en.wikipedia.org/wiki/Saipan">From the islands 🌴</a>
+            <a class="misc-right" href="http://www.camstrobel.com/">Site inspired by <span>Cam Strobel</span></a>
+            </section>
         </div>
         
     </div>
