--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="infobox">
                 <img src="img\picture-of-me.jpg" alt="Picture of Me">
                 <h1>Hey there, I'm Ethan Tudela. <br>Freelance website designer.</h1>
-                <a href="mailto:hello@ethantudela.com">Let's chat.</a>
+                <a href="mailto:ethan.tudela@gmail.com">Let's chat.</a>
             </div>
             <nav>
                 <a href="https://www.linkedin.com/in/ethantudela/"><i class="fab fa-linkedin-in"></i></a>
