--- a/index.html
+++ b/index.html
@@ -69,13 +69,12 @@
         <div class="right">
             <section class="about">
                 <h3>About Me</h3>
-                <p>I'm a freelance website designer and developer currently based in Gainesville, Florida. I specialize
-                    in front-end development with a working knowledge of back-end development.</p>
+                <p>I'm a freelance website designer and developer currently based in Gainesville, Florida.<br>I specialize in front-end development with a working knowledge of back-end technologies.</p>
             </section>
             <section class="skill">
                 <h3>Skills</h3>
                 <ul>
-                    <li><i class="fas fa-caret-right"></i>Website design & development</li>
+                    <li><i class="fas fa-caret-right"></i>Website design & <span>development</span></li>
                     <li><i class="fas fa-caret-right"></i>Website deployment</li>
                     <li><i class="fas fa-caret-right"></i>Website analytics</li>
                 </ul>
@@ -99,7 +98,7 @@
                 <h3>Experience</h3>
                 <div class="experience-list">
                     <div class="experience-item">
-                        <p><span>Nov. 2018 - Present</span> - Freelance website development</p>
+                        <p><span>Nov. 2018 - Present</span>: Freelance website development</p>
                     </div>
                 </div>
             </section>
