small design changes

--- a/index.html
+++ b/index.html
@@ -74,24 +74,24 @@
             <section class="skill">
                 <h3>Skills</h3>
                 <ul>
-                    <li><i class="fas fa-caret-right"></i>Website design & <span>development</span></li>
-                    <li><i class="fas fa-caret-right"></i>Website deployment</li>
-                    <li><i class="fas fa-caret-right"></i>Website analytics</li>
+                    <li><i class="far fa-check-circle"></i>Website design & <span>development</span></li>
+                    <li><i class="far fa-check-circle"></i>Website deployment</li>
+                    <li><i class="far fa-check-circle"></i>Website analytics</li>
                 </ul>
             </section>
             <section class="technology">
                 <h3>Tech overview</h3>
                 <ul>
-                    <li><i class="fas fa-caret-right"></i>HTML</li>
-                    <li><i class="fas fa-caret-right"></i>CSS/SASS</li>
-                    <li><i class="fas fa-caret-right"></i>JavaScript</li>
+                    <li><i class="far fa-check-circle"></i>HTML</li>
+                    <li><i class="far fa-check-circle"></i>CSS/SASS</li>
+                    <li><i class="far fa-check-circle"></i>JavaScript</li>
                 </ul>
             </section>
-            <section class="interest">
+            <section class="tools">
                 <h3>Tools</h3>
                 <ul>
-                    <li><i class="fas fa-caret-right"></i>Visual Studio Code</li>
-                    <li><i class="fas fa-caret-right"></i>Adobe XD & Photoshop</li>
+                    <li><i class="far fa-check-circle"></i>Visual Studio Code</li>
+                    <li><i class="far fa-check-circle"></i>Adobe XD & Photoshop</li>
                 </ul>
             </section>
             <section class="experience">
