--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <h3>Tools</h3>
                 <ul>
                     <li><i class="far fa-check-circle"></i>Visual Studio Code</li>
-                    <li><i class="far fa-check-circle"></i>Adobe XD & Photoshop</li>
+                    <li><i class="far fa-check-circle"></i>Adobe XD</li>
                 </ul>
             </section>
             <section class="experience">
