--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="left">
             <div class="infobox">
                 <img src="img\picture-of-me.jpg" alt="Picture of Me">
-                <h1>Hey there, I'm Ethan Tudela. <br>Freelance website developer.</h1>
+                <h1>Hey there, I'm Ethan Tudela. <br>Freelance website <span class="txt-type" data-wait="3000" data-words='["Developer, "Designer]'></span></h1>
                 <a href="mailto:ethan.tudela@gmail.com">Let's chat.</a>
             </div>
             <nav>
