--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
         <div class="left">
             <div class="infobox">
                 <img src="img\picture-of-me.jpg" alt="Picture of Me">
-                <h1>Hey there, I'm Ethan Tudela. <br>Freelance website <span class="txt-type" data-wait="3000" data-words='["Developer, "Designer]'></span></h1>
+                <div class="wrapper">
+                    <h1>Hey there, I'm Ethan Tudela.</h1>
+                    <h1>Freelance website <span class="txt-type" data-wait="3000" data-words='["designer.", "developer."]'></span></h1>
+                </div>
                 <a href="mailto:ethan.tudela@gmail.com">Let's chat.</a>
             </div>
             <nav>
@@ -74,7 +77,8 @@
             <section class="skill">
                 <h3>Skills</h3>
                 <ul>
-                    <li><i class="far fa-check-circle"></i>Website design & <span>development</span></li>
+                    <li><i class="far fa-check-circle"></i>Website design</li>
+                    <li><i class="far fa-check-circle"></i>Website development</li>
                     <li><i class="far fa-check-circle"></i>Website deployment</li>
                     <li><i class="far fa-check-circle"></i>Website analytics</li>
                 </ul>
@@ -109,6 +113,7 @@
         </div>
         
     </div>
+    <script src="main.js">
 </body>
 
 </html>
