--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     <!-- Website icon -->
     <link rel="shortcut icon" href="favicon.ico">
+    
+    <script src="main.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137053294-1"></script>
@@ -113,7 +115,7 @@
         </div>
         
     </div>
-    <script src="main.js">
+
 </body>
 
 </html>
