--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             <section class="skill">
                 <h3>Skills</h3>
                 <ul>
-                    <li><i class="far fa-check-circle"></i>Website design</li>
-                    <li><i class="far fa-check-circle"></i>Website development</li>
-                    <li><i class="far fa-check-circle"></i>Website deployment</li>
-                    <li><i class="far fa-check-circle"></i>Website analytics</li>
+                    <li><i class="far fa-check-circle"></i>Web design</li>
+                    <li><i class="far fa-check-circle"></i>Web development</li>
+                    <li><i class="far fa-check-circle"></i>Web deployment</li>
+                    <li><i class="far fa-check-circle"></i>Web analytics</li>
                 </ul>
             </section>
             <section class="technology">
