--- a/index.html
+++ b/index.html
@@ -73,20 +73,19 @@
         </div>
         <div class="right">
             <section class="about">
-                <h3>About Me</h3>
+                <h2>About Me</h2>
                 <p>I'm a freelance website designer and developer currently based in Gainesville, Florida.<br>I specialize in front-end development with a working knowledge of back-end technologies.</p>
             </section>
             <section class="skill">
-                <h3>Skills</h3>
+                <h2>Skills</h2>
                 <ul>
+                    <li><i class="far fa-check-circle"></i>Front-end development</li>
                     <li><i class="far fa-check-circle"></i>Web design</li>
-                    <li><i class="far fa-check-circle"></i>Web development</li>
                     <li><i class="far fa-check-circle"></i>Web deployment</li>
-                    <li><i class="far fa-check-circle"></i>Web analytics</li>
                 </ul>
             </section>
             <section class="technology">
-                <h3>Tech overview</h3>
+                <h2>Tech overview</h2>
                 <ul>
                     <li><i class="far fa-check-circle"></i>HTML</li>
                     <li><i class="far fa-check-circle"></i>CSS/SASS</li>
@@ -94,14 +93,14 @@
                 </ul>
             </section>
             <section class="tools">
-                <h3>Tools</h3>
+                <h2>Tools</h2>
                 <ul>
                     <li><i class="far fa-check-circle"></i>Visual Studio Code</li>
                     <li><i class="far fa-check-circle"></i>Adobe XD</li>
                 </ul>
             </section>
             <section class="experience">
-                <h3>Experience</h3>
+                <h2>Experience</h2>
                 <div class="experience-list">
                     <div class="experience-item">
                         <p><span>Nov. 2018 - Present</span>: Freelance website development</p>
@@ -113,7 +112,6 @@
             <a class="misc-right" href="http://www.camstrobel.com/">Site inspired by <span>Cam Strobel</span></a>
             </section>
         </div>
-        
     </div>
 
 </body>
