--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ethan Tudela | Website designer & developer</title>
+    <title>Ethan Tudela | Web designer & developer</title>
     <meta name="description" content="Ethan Tudela is a freelancing website designer and developer currently based in Gainesville, Florida.">
     <meta name="robots" content="index, nofollow">
     <meta name="author" content="Ethan Tudela">
