--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <img src="img\picture-of-me.jpg" alt="Picture of Me">
                 <div class="wrapper">
                     <h1>Hey there, I'm Ethan Tudela.</h1>
-                    <h1>Freelance website <span class="txt-type" data-wait="3000" data-words='["designer.", "developer."]'></span></h1>
+                    <h1>Freelance web <span class="txt-type" data-wait="3000" data-words='["designer.", "developer."]'></span></h1>
                 </div>
                 <a href="mailto:ethan.tudela@gmail.com">Let's chat.</a>
             </div>
