feature implement start

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <body>
     <div class="container">
         <div class="left">
+            <button class="night">Test</button>
             <div class="infobox">
                 <img src="img\picture-of-me.jpg" alt="Picture of Me">
                 <div class="wrapper">
