--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ethan Tudela | Web designer & developer</title>
-    <meta name="description" content="Ethan Tudela is a freelancing website designer and developer currently based in Gainesville, Florida.">
+    <meta name="description"
+        content="Ethan Tudela is a freelancing website designer and developer currently based in Gainesville, Florida.">
     <meta name="robots" content="index, nofollow">
     <meta name="author" content="Ethan Tudela">
 
@@ -18,7 +20,7 @@
 
     <!-- Website icon -->
     <link rel="shortcut icon" href="favicon.ico">
-    
+
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137053294-1"></script>
@@ -54,28 +56,32 @@
         <div class="left left-light">
             <div class="button-container">
                 <div class="nightmode">
-                    <input type="checkbox" name="nightmode" class="nightmode-checkbox" id="mynightmode" onclick="nightMode()">
-                    <label class="nightmode-label" for="mynightmode" ></label>
+                    <input type="checkbox" name="nightmode" class="nightmode-checkbox" id="mynightmode"
+                        onclick="nightMode()">
+                    <label class="nightmode-label" for="mynightmode"></label>
                 </div>
             </div>
             <div class="infobox">
                 <img src="img\picture-of-me.jpg" alt="Picture of Me">
                 <div class="wrapper">
                     <h1>Hey there, I'm Ethan Tudela.</h1>
-                    <h1>Freelance web <span class="txt-type" data-wait="3000" data-words='["designer.", "developer."]'></span></h1>
+                    <h1>Freelance web <span class="txt-type" data-wait="3000"
+                            data-words='["designer.", "developer."]'></span></h1>
                 </div>
                 <a href="mailto:ethan.tudela@gmail.com">Let's chat.</a>
             </div>
             <nav>
                 <a href="https://www.linkedin.com/in/ethantudela/"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://github.com/ethantudela"><i class="fab fa-github"></i></a>
-                <a href="https://stackoverflow.com/users/10292365/ethan-tudela"><i class="fab fa-stack-overflow"></i></a>
+                <a href="https://stackoverflow.com/users/10292365/ethan-tudela"><i
+                        class="fab fa-stack-overflow"></i></a>
             </nav>
         </div>
         <div class="right right-light">
             <section class="about">
                 <h2>About Me</h2>
-                <p>I'm a freelance website designer and developer currently based in Gainesville, Florida.<br>I specialize in front-end development with a working knowledge of back-end technologies.</p>
+                <p>I'm a freelance website designer and developer currently based in Gainesville, Florida.<br>I
+                    specialize in front-end development with a working knowledge of back-end technologies.</p>
             </section>
             <section class="skill">
                 <h2>Skills</h2>
@@ -109,8 +115,8 @@
                 </div>
             </section>
             <section class="misc">
-            <a class="misc-left" href="https://en.wikipedia.org/wiki/Saipan">From the islands 🌴</a>
-            <a class="misc-right" href="http://www.camstrobel.com/">Site inspired by <span>Cam Strobel</span></a>
+                <a class="misc-left" href="https://en.wikipedia.org/wiki/Saipan">From the islands 🌴</a>
+                <a class="misc-right" href="http://www.camstrobel.com/">Site inspired by <span>Cam Strobel</span></a>
             </section>
         </div>
     </div>
