--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <h2>Experience</h2>
                 <div class="experience-list">
                     <div class="experience-item">
-                        <p><span>Nov. 2018 - Present</span>: Freelance website development</p>
+                        <p><b>Nov. 2018 - Present</b>: Freelance web development</p>
                     </div>
                 </div>
             </section>
