--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                       <label><textarea class="usermessage" placeholder="Your message here." name="message"></textarea></label>
                     </p>
                     <p>
-                      <button type="submit" class="sendbutton" onclick="sendMessage()">Send me a message.</button>
+                      <button type="submit" class="sendbutton">Send me a message.</button>
                     </p>
                   </form>
             </section>
