--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
                 <h2>Contact Me</h2>
                 <form name="contact" method="POST" data-netlify="true">
                     <p>
-                      <label><input placeholder="Your full name here." type="text" name="name" /></label>   
+                      <label><input required placeholder="Your full name here." type="text" name="name" /></label>   
                     </p>
                     <p>
-                      <label><input placeholder="Your e-mail here." type="email" name="email" /></label>
+                      <label><input required placeholder="Your e-mail here." type="email" name="email" /></label>
                     </p>
                     <p>
-                      <label><textarea class="usermessage" placeholder="Your message here." name="message"></textarea></label>
+                      <label><textarea required class="usermessage" placeholder="Your message here." name="message"></textarea></label>
                     </p>
                     <p>
                       <button type="submit" class="sendbutton">Send me a message.</button>
