--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                     <h1>Freelance web <span class="txt-type" data-wait="3000"
                             data-words='["designer.", "developer."]'></span></h1>
                 </div>
-                <a href="mailto:ethan.tudela@gmail.com">Let's chat.</a>
+                <a href="mailto:hello@ethantudela.com">Let's chat.</a>
             </div>
             <nav>
-                <a href="https://drive.google.com/open?id=1JMeZRke-RSz-OyYZZmIU2ZlQ1bRQFTnS"><i class="far fa-file-alt"></i></a>
+                <a href="https://drive.google.com/open?id=1UAgp0dbeRvEGhQCF6VvSeAFvQXrLZf2i"><i class="far fa-file-alt"></i></a>
                 <a href="https://www.linkedin.com/in/ethantudela/"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://github.com/ethantudela"><i class="fab fa-github"></i></a>
                 <a href="https://stackoverflow.com/users/10292365/ethan-tudela"><i class="fab fa-stack-overflow"></i></a>
