Relevant Personal Information Changes

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             "jobTitle": "Website designer & developer",
             "address": {
                 "@type": "PostalAddress",
-                "addressLocality": "Gainesville",
-                "addressRegion": "FL"
+                "addressLocality": "Portland",
+                "addressRegion": "OR"
             }
         }
     </script>
@@ -72,8 +72,8 @@
         </div>
         <div class="right right-light">
             <section class="about">
-                <h2>About Me</h2>
-                <p>I'm a freelance website designer and developer currently based in Gainesville, Florida.<br>I
+                <h2>Hello!</h2>
+                <p>I'm a self-taught website designer and developer currently based in Portland, Oregon.<br>I
                     specialize in front-end development with a working knowledge of back-end technologies.</p>
             </section>
             <section class="skill">
@@ -81,7 +81,6 @@
                 <ul>
                     <li><i class="far fa-check-circle"></i>Front-end development</li>
                     <li><i class="far fa-check-circle"></i>Web design</li>
-                    <li><i class="far fa-check-circle"></i>Web deployment</li>
                 </ul>
             </section>
             <section class="technology">
@@ -90,10 +89,11 @@
                     <li><i class="far fa-check-circle"></i>HTML</li>
                     <li><i class="far fa-check-circle"></i>CSS/SCSS</li>
                     <li><i class="far fa-check-circle"></i>JavaScript</li>
+                    <li><i class="far fa-check-circle"></i>Python</li>
                 </ul>
             </section>
             <section class="tools">
-                <h2>Tools</h2>
+                <h2>Workflow</h2>
                 <ul>
                     <li><i class="far fa-check-circle"></i>Visual Studio Code</li>
                     <li><i class="far fa-check-circle"></i>Adobe XD</li>
@@ -103,7 +103,7 @@
                 <h2>Experience</h2>
                 <div class="experience-list">
                     <div class="experience-item">
-                        <p><b>Nov. 2018 - Present</b>: Freelance web development</p>
+                        <p><b>Present</b>: Freelance web development</p>
                     </div>
                 </div>
             </section>
