--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ethan Tudela | Web designer & developer</title>
     <meta name="description"
-        content="Ethan Tudela is a freelancing website designer and developer currently based in Gainesville, Florida.">
+        content="Ethan Tudela is a freelancing website designer and developer currently based in Portland, Oregon.">
     <meta name="robots" content="index, nofollow">
     <meta name="author" content="Ethan Tudela">
 
@@ -109,7 +109,6 @@
             </section>
             <section class="misc">
                 <a class="misc-left" href="https://en.wikipedia.org/wiki/Saipan">From the islands 🌴</a>
-                <a class="misc-right" href="http://www.camstrobel.com/">Site inspired by <span>Cam Strobel</span></a>
             </section>
         </div>
     </div>
