Removal of unused code

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <body>
     <div class="container">
-        <div class="left left-light">
+        <div class="left">
             <div class="infobox">
                 <img src="img\picture-of-me.jpg" alt="Picture of Me">
                 <div class="wrapper">
@@ -70,7 +70,7 @@
                 <a href="https://stackoverflow.com/users/10292365/ethan-tudela"><i class="fab fa-stack-overflow"></i></a>
             </nav>
         </div>
-        <div class="right right-light">
+        <div class="right">
             <section class="about">
                 <h2>Hello!</h2>
                 <p>I'm a self-taught website designer and developer currently based in Portland, Oregon.<br>I
